<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/teal_200"
        android:orientation="horizontal"
        android:textAlignment="textEnd"
        android:textDirection="inherit">

        <ImageButton
            android:id="@+id/imageButton_back"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_back" />

        <TextView
            android:id="@+id/textView_currentMonth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <ImageButton
            android:id="@+id/imageButton_forward"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_forward" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mon"
            android:textSize="25sp"
            android:textColor="@color/teal_700"
            android:layout_weight="4"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tue"
            android:textSize="25sp"
            android:textColor="@color/teal_700"
            android:layout_weight="4"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wed"
            android:textSize="25sp"
            android:textColor="@color/teal_700"
            android:layout_weight="4"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/thu"
            android:textSize="25sp"
            android:textColor="@color/teal_700"
            android:layout_weight="4"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fri"
            android:textSize="25sp"
            android:textColor="@color/teal_700"
            android:layout_weight="4"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sat"
            android:textSize="25sp"
            android:textColor="@color/teal_700"
            android:layout_weight="4"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sun"
            android:textSize="25sp"
            android:textColor="@color/teal_700"
            android:layout_weight="4"/>

    </LinearLayout>

    <GridView
        android:id="@+id/gridView_calendar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:numColumns="7"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:layout_gravity="center"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/imageButton_deleteAll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:backgroundTintMode="src_in"
            app:backgroundTint="@color/teal_700"
            app:srcCompat="@android:drawable/ic_menu_delete" />

        <androidx.constraintlayout.utils.widget.MotionLabel
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_deleteAll"
            android:textColor="@color/teal_700"/>

    </LinearLayout>

</LinearLayout>